# Jerm

.github/workflows/: build.yml
Compiler/: JermCompiler.cabal  example.jermc  foo.out
Compiler/lib/: ByteCodes.hs  Expressions.hs  Literals.hs  Statements.hs  Utils.hs
Compiler/lib/Parsers/: Expressions.hs  Literals.hs  Statements.hs  Utils.hs
Compiler/lib/Transpilers/: ByteCodes.hs  LocalStack.hs
Compiler/src/: ByteCodes.hs  CommandArguments.hs  Expressions.hs  Literals.hs  Main.hs  Statements.hs  main.hs
Compiler/tests/: Main.hs
Compiler/tests/Literals/: IntegerLiteralTests.hs
Compiler/tests/Statements/: AssignmentTests.hs  IfStatementTests.hs
Compiler/tests/Transpilers/: LocalStackOffsetTests.hs
Runtime/: .gitignore  CMakeLists.txt  Cargo.toml  main.c
Runtime/src/: main.rs
