cabal-version:      3.0
name: JermCompiler
version: 0.0.1
common warnings
    ghc-options: -Wall

executable JermCompiler
    import: warnings
    main-is: Main.hs
    other-modules:
        ByteCodes,
        CommandArguments,
        Expressions,
        Literals,
        Statements,
        Utils
    build-depends:    
        base ^>=4.17.2.1,
        optparse-applicative,
        parsec,
        binary,
        bytestring
    hs-source-dirs: src
    default-language: GHC2021

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends: base ^>=4.17.2.1, HUnit ^>=1.6, JermCompiler
    hs-source-dirs: tests
    default-language: GHC2021