cabal-version:      3.0
name: JermCompiler
version: 0.0.1
common warnings
    ghc-options: -Wall

library JermCompilerLib
    exposed-modules: Transpilers.ByteCodes, Transpilers.LocalStack, Parsers.Expressions, Parsers.Literals, Parsers.Statements, Parsers.Utils
    hs-source-dirs: lib
    build-depends: base ^>=4.17.2.1, parsec
    default-language: GHC2021

executable JermCompiler
    import: warnings
    main-is: Main.hs
    other-modules: CommandArguments
    build-depends:    
        base ^>=4.17.2.1,
        optparse-applicative,
        parsec,
        binary,
        bytestring,
        JermCompilerLib
    hs-source-dirs: src
    default-language: GHC2021

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules: Statements.IfStatementTests, Statements.AssignmentTests, Literals.IntegerLiteralTests
    build-depends: base ^>=4.17.2.1, HUnit ^>=1.6, JermCompilerLib, parsec
    hs-source-dirs: tests
    default-language: GHC2021